--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.9.2
 Django==5.2.6
+dotenv==0.9.9
 gunicorn==23.0.0
 packaging==25.0
+psycopg==3.2.10
+psycopg-binary==3.2.10
+python-dotenv==1.1.1
 sqlparse==0.5.3
 tzdata==2025.2
